# ksearch

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE.md  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  ksearch.h  libksearch.pc.in
domains/: CMakeLists.txt  README.md  helpers.cc  helpers.h  solver.h
domains/grid/: CMakeLists.txt  README.md  grid.cc  grid_t.cc  grid_t.h
domains/maps/: CMakeLists.txt  generator.cc  map.cc  map_t.cc  map_t.h
domains/maps/benchmark/: random512-10-0.test  random512-20-0.test  random512-30-0.test  random512-35-0.test
domains/maps/benchmark/random-map/: random512-15-0.test  random512-25-0.test
domains/n-pancake/: CMakeLists.txt  README.md  generator.cc  npancake.cc  npancake_t.cc  npancake_t.h
domains/n-pancake/benchmark/: test-10  test-10.test  test-20  test-30  test-40.test
domains/n-puzzle/: CMakeLists.txt  README.md  generator.cc  npuzzle.cc  npuzzle_t.cc  npuzzle_t.h
domains/n-puzzle/benchmark/: 16puzzle.test  9puzzle.test
domains/roadmap/: CMakeLists.txt  README.md  generator.cc  getopt.c  getopt.h  getopt1.c  graph_t.cc  graph_t.h  roadmap.cc  roadmap_t.cc  roadmap_t.h
domains/roadmap/benchmark/: CMakeLists.txt  USA-road-d.BAY.bug  USA-road-d.BAY.test  USA-road-d.CAL.test  USA-road-d.COL.test  USA-road-d.CTR.test  USA-road-d.E.test  USA-road-d.FLA.test  USA-road-d.LKS.bug  USA-road-d.LKS.test  USA-road-d.NE.test  USA-road-d.NW.test  USA-road-d.NY.test  USA-road-d.USA.test  USA-road-d.W.test  bayareadist.test
scripts/condor/: argparser.py  cndconf.py  cndk.py  condor.py  utils.py  version.py
scripts/plotter/: argparser.py  colors.py  plotter.py  pltGNUfile.py  pltchecker.py  pltkserie.py  pltserie.py  plttable.py  spsreader.py  utils.py  version.py
scripts/plotter/data/maps/octile/10/: random512-10-0.K0.octile.1-1000.csv  random512-10-0.K0.octile.1-10000.csv  random512-10-0.Ks.octile.1-1000.csv  random512-10-0.Ks.octile.1-10000.csv  random512-10-0.belA0.octile.1-10000.csv  random512-10-0.belAs.octile.1-10000.csv  random512-10-0.mAs.octile.1-100.csv  random512-10-0.mDijkstra.octile.1-100.csv
scripts/plotter/data/maps/octile/15/: random512-15-0.K0.octile.1-1000.csv  random512-15-0.K0.octile.1-10000.csv  random512-15-0.Ks.octile.1-1000.csv  random512-15-0.Ks.octile.1-10000.csv  random512-15-0.belA0.octile.1-10000.csv  random512-15-0.belAs.octile.1-10000.csv  random512-15-0.mAs.octile.1-100.csv  random512-15-0.mDijkstra.octile.1-100.csv
scripts/plotter/data/maps/octile/20/: random512-20-0.K0.octile.1-1000.csv  random512-20-0.K0.octile.1-10000.csv  random512-20-0.Ks.octile.1-1000.csv  random512-20-0.Ks.octile.1-10000.csv  random512-20-0.belA0.octile.1-10000.csv  random512-20-0.belAs.octile.1-10000.csv  random512-20-0.mAs.octile.1-100.csv  random512-20-0.mDijkstra.octile.1-100.csv
scripts/plotter/data/maps/octile/25/: random512-25-0.K0.octile.1-1000.csv  random512-25-0.K0.octile.1-10000.csv  random512-25-0.Ks.octile.1-1000.csv  random512-25-0.Ks.octile.1-10000.csv  random512-25-0.belA0.octile.1-10000.csv  random512-25-0.belAs.octile.1-10000.csv  random512-25-0.mAs.octile.1-100.csv  random512-25-0.mDijkstra.octile.1-100.csv
scripts/plotter/data/maps/octile/30/: random512-30-0.K0.octile.1-1000.csv  random512-30-0.K0.octile.1-10000.csv  random512-30-0.Ks.octile.1-1000.csv  random512-30-0.Ks.octile.1-10000.csv  random512-30-0.belA0.octile.1-10000.csv  random512-30-0.belAs.octile.1-10000.csv  random512-30-0.mAs.octile.1-100.csv  random512-30-0.mDijkstra.octile.1-100.csv
scripts/plotter/data/maps/octile/35/: random512-35-0.K0.octile.1-1000.csv  random512-35-0.K0.octile.1-10000.csv  random512-35-0.Ks.octile.1-1000.csv  random512-35-0.Ks.octile.1-10000.csv  random512-35-0.belA0.octile.1-10000.csv  random512-35-0.belAs.octile.1-10000.csv  random512-35-0.mAs.octile.1-100.csv  random512-35-0.mDijkstra.octile.1-100.csv
scripts/plotter/data/maps/unit/10/: random512-10-0.K0.unit.1-1000.csv  random512-10-0.K0.unit.1-10000.csv  random512-10-0.Ks.unit.1-1000.csv  random512-10-0.Ks.unit.1-10000.csv  random512-10-0.belA0.unit.1-10000.csv  random512-10-0.belAs.unit.1-10000.csv  random512-10-0.mAs.unit.1-100.csv  random512-10-0.mAs.unit.1-500.csv  random512-10-0.mDijkstra.unit.1-100.csv
scripts/plotter/data/maps/unit/15/: random512-15-0.K0.unit.1-1000.csv  random512-15-0.K0.unit.1-10000.csv  random512-15-0.Ks.unit.1-1000.csv  random512-15-0.Ks.unit.1-10000.csv  random512-15-0.belA0.unit.1-10000.csv  random512-15-0.belAs.unit.1-10000.csv  random512-15-0.mAs.unit.1-100.csv  random512-15-0.mAs.unit.1-500.csv  random512-15-0.mDijkstra.unit.1-100.csv
scripts/plotter/data/maps/unit/20/: random512-20-0.K0.unit.1-1000.csv  (+8 more)
scripts/plotter/results/maps/: maps.sh
scripts/plotter/results/n-pancake/: n-pancake.sh
scripts/plotter/results/n-puzzle/: n-puzzle.sh
scripts/plotter/results/roadmap/: roadmap.sh
scripts/texfig/: argparser.py  figconf.py  texfig.py  utils.py  version.py
src/: CMakeLists.txt  KHSdefs.h  KHSinit.cc  KHSinit.h  ksearch.h.in
src/algorithm/: KHSIK.h  KHSIKStar.h  KHSbela.h  KHSbsolver.h  KHSgdlazymsolver.h  KHSlazymsolver.h  KHSmA.h  KHSmhsolver.h  KHSmsolver.h  KHSsolver.h
src/structs/: IBaseNode.h  KHSIBaseNode.h  KHSbacknode_t.h  KHSbucket_t.h  KHSbucketvd_seq_t.h  KHSbucketvd_t.h  KHSbucketvl_t.h  KHSclosed_t.h  KHSfmnode_t.h  KHSksolution_t.h  KHSksolutions_t.h  KHSlabelednode_t.h  KHSmnode_t.h  KHSnode_t.h  KHSset_t.h  KHSsolution_t.h
tests/: CMakeLists.txt  TSTdefs.h  TSThelpers.cc  TSThelpers.h  gtest.cc
tests/algorithm/: TSTbela.cc  TSTmA.cc
tests/domains/: TSTgraph.cc  TSTnpancake.cc  TSTnpuzzle.cc  TSTroadmap.cc
tests/fixtures/: TSTbacknodefixture.h  TSTbelafixture.h  TSTbucketfixture.h  TSTclosedfixture.h  TSTgraphfixture.h  TSTksolutionfixture.h  TSTksolutionsfixture.h  TSTlabelednodefixture.h  TSTmAfixture.h  TSTnodefixture.h  TSTnpancakefixture.h  TSTnpuzzlefixture.h  TSTroadmapfixture.h  TSTsolutionfixture.h
tests/structs/: TSTbacknode_t.cc  TSTbucket_t.cc  TSTclosed_t.cc  TSTksolution_t.cc  TSTksolutions_t.cc  TSTlabelednode_t.cc  TSTnode_t.cc  TSTsolution_t.cc
(+793 files in other folders)
